McKaySQLParser/obj/Debug/SelectSQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\McKay\Documents\Visual Studio 2012\Projects\McKaySQLParser\McKaySQLParser\Grammars\SelectSQL.g4 by ANTLR 4.5-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace McKaySQLParser.Grammars {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class SelectSQLParser : Parser {
	public const int
		A=1, B=2, C=3, D=4, E=5, F=6, G=7, H=8, I=9, J=10, K=11, L=12, M=13, N=14, 
		O=15, P=16, Q=17, R=18, S=19, T=20, U=21, V=22, W=23, X=24, Y=25, Z=26, 
		COMMA=27, STAR=28, L_BRACK=29, R_BRACK=30, DOT=31, STRING=32, NUMBER=33, 
		UNDER_LINE=34, OPS_EQ=35, OPS_LT=36, OPS_LET=37, OPS_GT=38, OPS_GET=39, 
		OPS_NEQ=40, SELECT=41, FROM=42, WHERE=43, ORDERBY=44, AS=45, ORDERBY_ASC=46, 
		ORDERBY_DESC=47, AND_OR=48, NOLOCK=49, READPAST=50, FUNCTIONS_PREFIX=51, 
		COLUMN_PREDICT=52;
	public const int
		RULE_compileUnit = 0, RULE_sql = 1, RULE_select = 2, RULE_columns = 3, 
		RULE_column = 4, RULE_columnExpression = 5, RULE_functionableColumn = 6, 
		RULE_columnName = 7, RULE_from = 8, RULE_tableLockType = 9, RULE_table = 10, 
		RULE_where = 11, RULE_orderby = 12, RULE_expression = 13, RULE_identity = 14, 
		RULE_character = 15, RULE_number = 16, RULE_string = 17, RULE_orderByStmts = 18, 
		RULE_orderByStmt = 19, RULE_orderByDirection = 20, RULE_whereStmts = 21, 
		RULE_whereStmt = 22, RULE_whereCondition = 23, RULE_operators = 24, RULE_comparableValue = 25;
	public static readonly string[] ruleNames = {
		"compileUnit", "sql", "select", "columns", "column", "columnExpression", 
		"functionableColumn", "columnName", "from", "tableLockType", "table", 
		"where", "orderby", "expression", "identity", "character", "number", "string", 
		"orderByStmts", "orderByStmt", "orderByDirection", "whereStmts", "whereStmt", 
		"whereCondition", "operators", "comparableValue"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "','", "'*'", "'('", "')'", "'.'", null, null, "'_'", 
		"'='", "'<'", "'<='", "'>'", "'>='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", 
		"N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "COMMA", 
		"STAR", "L_BRACK", "R_BRACK", "DOT", "STRING", "NUMBER", "UNDER_LINE", 
		"OPS_EQ", "OPS_LT", "OPS_LET", "OPS_GT", "OPS_GET", "OPS_NEQ", "SELECT", 
		"FROM", "WHERE", "ORDERBY", "AS", "ORDERBY_ASC", "ORDERBY_DESC", "AND_OR", 
		"NOLOCK", "READPAST", "FUNCTIONS_PREFIX", "COLUMN_PREDICT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SelectSQL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public SelectSQLParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public SqlContext sql() {
			return GetRuleContext<SqlContext>(0);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; sql();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SqlContext : ParserRuleContext {
		public SelectContext select() {
			return GetRuleContext<SelectContext>(0);
		}
		public FromContext from() {
			return GetRuleContext<FromContext>(0);
		}
		public WhereContext where() {
			return GetRuleContext<WhereContext>(0);
		}
		public OrderbyContext orderby() {
			return GetRuleContext<OrderbyContext>(0);
		}
		public SqlContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sql; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterSql(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitSql(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSql(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SqlContext sql() {
		SqlContext _localctx = new SqlContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_sql);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; select();
			State = 55; from();
			State = 57;
			_la = _input.La(1);
			if (_la==WHERE) {
				{
				State = 56; where();
				}
			}

			State = 60;
			_la = _input.La(1);
			if (_la==ORDERBY) {
				{
				State = 59; orderby();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectContext : ParserRuleContext {
		public ITerminalNode SELECT() { return GetToken(SelectSQLParser.SELECT, 0); }
		public ColumnsContext columns() {
			return GetRuleContext<ColumnsContext>(0);
		}
		public ITerminalNode COLUMN_PREDICT() { return GetToken(SelectSQLParser.COLUMN_PREDICT, 0); }
		public SelectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_select; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterSelect(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitSelect(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelect(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectContext select() {
		SelectContext _localctx = new SelectContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_select);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; Match(SELECT);
			State = 64;
			_la = _input.La(1);
			if (_la==COLUMN_PREDICT) {
				{
				State = 63; Match(COLUMN_PREDICT);
				}
			}

			State = 66; columns();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColumnsContext : ParserRuleContext {
		public ColumnContext[] column() {
			return GetRuleContexts<ColumnContext>();
		}
		public ColumnContext column(int i) {
			return GetRuleContext<ColumnContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(SelectSQLParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(SelectSQLParser.COMMA, i);
		}
		public ColumnsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_columns; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterColumns(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitColumns(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumns(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ColumnsContext columns() {
		ColumnsContext _localctx = new ColumnsContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_columns);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; column();
			State = 73;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COMMA) {
				{
				{
				State = 69; Match(COMMA);
				State = 70; column();
				}
				}
				State = 75;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColumnContext : ParserRuleContext {
		public ColumnExpressionContext columnExpression() {
			return GetRuleContext<ColumnExpressionContext>(0);
		}
		public ITerminalNode AS() { return GetToken(SelectSQLParser.AS, 0); }
		public ColumnNameContext columnName() {
			return GetRuleContext<ColumnNameContext>(0);
		}
		public ColumnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_column; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterColumn(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitColumn(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ColumnContext column() {
		ColumnContext _localctx = new ColumnContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_column);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; columnExpression();
			State = 79;
			_la = _input.La(1);
			if (_la==AS) {
				{
				State = 77; Match(AS);
				State = 78; columnName();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColumnExpressionContext : ParserRuleContext {
		public FunctionableColumnContext functionableColumn() {
			return GetRuleContext<FunctionableColumnContext>(0);
		}
		public ColumnNameContext columnName() {
			return GetRuleContext<ColumnNameContext>(0);
		}
		public ColumnExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_columnExpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterColumnExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitColumnExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumnExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ColumnExpressionContext columnExpression() {
		ColumnExpressionContext _localctx = new ColumnExpressionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_columnExpression);
		try {
			State = 83;
			switch (_input.La(1)) {
			case FUNCTIONS_PREFIX:
				EnterOuterAlt(_localctx, 1);
				{
				State = 81; functionableColumn();
				}
				break;
			case A:
			case B:
			case C:
			case D:
			case E:
			case F:
			case G:
			case H:
			case I:
			case J:
			case K:
			case L:
			case M:
			case N:
			case O:
			case P:
			case Q:
			case R:
			case S:
			case T:
			case U:
			case V:
			case W:
			case X:
			case Y:
			case Z:
			case STAR:
			case NUMBER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 82; columnName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionableColumnContext : ParserRuleContext {
		public ITerminalNode FUNCTIONS_PREFIX() { return GetToken(SelectSQLParser.FUNCTIONS_PREFIX, 0); }
		public ITerminalNode L_BRACK() { return GetToken(SelectSQLParser.L_BRACK, 0); }
		public ITerminalNode R_BRACK() { return GetToken(SelectSQLParser.R_BRACK, 0); }
		public ColumnNameContext columnName() {
			return GetRuleContext<ColumnNameContext>(0);
		}
		public ITerminalNode NUMBER() { return GetToken(SelectSQLParser.NUMBER, 0); }
		public ITerminalNode STAR() { return GetToken(SelectSQLParser.STAR, 0); }
		public FunctionableColumnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionableColumn; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterFunctionableColumn(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitFunctionableColumn(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionableColumn(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionableColumnContext functionableColumn() {
		FunctionableColumnContext _localctx = new FunctionableColumnContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_functionableColumn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(FUNCTIONS_PREFIX);
			State = 86; Match(L_BRACK);
			State = 90;
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				State = 87; columnName();
				}
				break;

			case 2:
				{
				State = 88; Match(NUMBER);
				}
				break;

			case 3:
				{
				State = 89; Match(STAR);
				}
				break;
			}
			State = 92; Match(R_BRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColumnNameContext : ParserRuleContext {
		public IdentityContext identity() {
			return GetRuleContext<IdentityContext>(0);
		}
		public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public ITerminalNode STAR() { return GetToken(SelectSQLParser.STAR, 0); }
		public ColumnNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_columnName; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterColumnName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitColumnName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitColumnName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ColumnNameContext columnName() {
		ColumnNameContext _localctx = new ColumnNameContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_columnName);
		try {
			State = 97;
			switch (_input.La(1)) {
			case A:
			case B:
			case C:
			case D:
			case E:
			case F:
			case G:
			case H:
			case I:
			case J:
			case K:
			case L:
			case M:
			case N:
			case O:
			case P:
			case Q:
			case R:
			case S:
			case T:
			case U:
			case V:
			case W:
			case X:
			case Y:
			case Z:
				EnterOuterAlt(_localctx, 1);
				{
				State = 94; identity();
				}
				break;
			case NUMBER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 95; number();
				}
				break;
			case STAR:
				EnterOuterAlt(_localctx, 3);
				{
				State = 96; Match(STAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FromContext : ParserRuleContext {
		public ITerminalNode FROM() { return GetToken(SelectSQLParser.FROM, 0); }
		public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		public TableLockTypeContext tableLockType() {
			return GetRuleContext<TableLockTypeContext>(0);
		}
		public FromContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_from; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterFrom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitFrom(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFrom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FromContext from() {
		FromContext _localctx = new FromContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_from);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(FROM);
			State = 100; table();
			State = 102;
			_la = _input.La(1);
			if (_la==L_BRACK) {
				{
				State = 101; tableLockType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TableLockTypeContext : ParserRuleContext {
		public ITerminalNode L_BRACK() { return GetToken(SelectSQLParser.L_BRACK, 0); }
		public ITerminalNode NOLOCK() { return GetToken(SelectSQLParser.NOLOCK, 0); }
		public ITerminalNode R_BRACK() { return GetToken(SelectSQLParser.R_BRACK, 0); }
		public ITerminalNode READPAST() { return GetToken(SelectSQLParser.READPAST, 0); }
		public TableLockTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tableLockType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterTableLockType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitTableLockType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTableLockType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TableLockTypeContext tableLockType() {
		TableLockTypeContext _localctx = new TableLockTypeContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_tableLockType);
		try {
			State = 110;
			switch ( Interpreter.AdaptivePredict(_input,9,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 104; Match(L_BRACK);
				State = 105; Match(NOLOCK);
				State = 106; Match(R_BRACK);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 107; Match(L_BRACK);
				State = 108; Match(READPAST);
				State = 109; Match(R_BRACK);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TableContext : ParserRuleContext {
		public IdentityContext identity() {
			return GetRuleContext<IdentityContext>(0);
		}
		public TableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_table; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterTable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitTable(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TableContext table() {
		TableContext _localctx = new TableContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_table);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; identity();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhereContext : ParserRuleContext {
		public ITerminalNode WHERE() { return GetToken(SelectSQLParser.WHERE, 0); }
		public WhereStmtsContext whereStmts() {
			return GetRuleContext<WhereStmtsContext>(0);
		}
		public WhereContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_where; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterWhere(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitWhere(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhere(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhereContext where() {
		WhereContext _localctx = new WhereContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_where);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(WHERE);
			State = 115; whereStmts();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderbyContext : ParserRuleContext {
		public ITerminalNode ORDERBY() { return GetToken(SelectSQLParser.ORDERBY, 0); }
		public OrderByStmtsContext orderByStmts() {
			return GetRuleContext<OrderByStmtsContext>(0);
		}
		public OrderbyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orderby; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.EnterOrderby(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISelectSQLListener typedListener = listener as ISelectSQLListener;
			if (typedListener != null) typedListener.ExitOrderby(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISelectSQLVisitor<TResult> typedVisitor = visitor as ISelectSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrderby(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrderbyContext orderby() {
		OrderbyContext _localctx = new OrderbyContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_orderby);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(ORDERBY);
			State = 118; orderByStmts();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
